--- a/www/controller/modules/calendar/assets/css/mcalendar.css
+++ b/www/controller/modules/calendar/assets/css/mcalendar.css
@@ -19,7 +19,6 @@ body[data-color="dark"] .fc-unthemed .fc-divider,body[data-color="dark"] .fc-unt
 .fc-unthemed .fc-today{border:1px solid #fc4b6c;background:#f2f4f8!important}
 .fc-state-highlight,.fc-cell-overlay{background:#f0f0f0}
 .fc-unthemed .fc-today{background:#fff}
-.fc-event{border-radius:0;border:none;background:#00AFFF;color:#fff!important;padding:5px;margin:1px -1px 0;cursor:move;font-size:13px;text-align:center}
 .calendar-event{margin:10px 5px 0 0;padding:6px 10px;display:inline-block;cursor:move;color:#fff;text-align:center;min-width:140px;background:#00AFFF}
 .calendar-event a{opacity:.6;font-size:10px;color:#fff;margin:4px 0 0 10px}
 .fc-basic-view td.fc-week-number span{padding-right:5px}
@@ -32,7 +31,57 @@ body[data-color="dark"] .fc-unthemed .fc-divider,body[data-color="dark"] .fc-unt
 .fc-widget-header{border:0!important}
 .fc-widget-content{border-color:rgba(120,130,140,0.13)!important}
 .fc-widget-content tr{border-bottom:none}
-.fc-event{border-radius:0;border:none;cursor:move;color:#fff!important;font-size:13px;margin:1px -1px 0;padding:5px;text-align:center;background:#7460ee}
+.fc-event{border-radius:4px!important;border-right-width: 0px;border-left-width: 4px;border-bottom-width: 0px;border-top-width:0px;border-style:solid!important;cursor:move;font-size:13px;margin:1px -1px 0;padding:5px;text-align:center;background-color: #f8f6f2;}
 .fc-state-default.fc-corner-left{border-top-left-radius: var(--border-radius);border-bottom-left-radius: var(--border-radius);}
 .fc-state-default.fc-corner-right{border-top-right-radius: var(--border-radius);border-bottom-right-radius: var(--border-radius);}
 .fc .fc-button-group > .fc-button{margin-right:5px;}
+.fc-event .fc-title{padding:2px 8px;display:block}
+.fc-event .fc-time{float:left;background:rgba(0,0,0,0.2);padding:2px 6px;margin:0 0 0 -1px}
+#fc-actions{position:absolute;bottom:10px;right:12px}
+.fc td,.fc th{border-color:transparent}
+.fc th{font-weight:400;padding:5px 0}
+.fc table{background:transparent}
+.fc table tr > td:first-child{border-left-width:0}
+#calendar-widget{margin-bottom:15px;box-shadow:0 1px 2px rgba(0,0,0,0.15);border-radius:2px;}
+#fc-actions{position:absolute;bottom:10px;right:12px}
+.fc{background-color:#fff;box-shadow:0 1px 1px rgba(0,0,0,0.15);margin-bottom:30px}
+.fc td,.fc th{border-color:#f0f0f0}
+.fc th{font-weight:400}
+.fc table tr > td:first-child{border-left-width:0}
+#calendar-widget .fc-toolbar{background:#F7f7f7;border-radius:2px 2px 0 0;}
+#calendar-widget .fc-day-header{color:#fff;background:#000;padding:5px 0;border-width:0}
+#calendar-widget .fc-day-number{text-align:center;padding:5px 0}
+#calendar-widget .fc-day-grid-event{margin:1px 3px}
+#calendar-widget .ui-widget-header th,#calendar-widget .ui-widget-header{border-width:0}
+#calendar .fc-day-header{text-align:left;font-size:14px;border-bottom-width:0;border-right-color:#eee;padding:10px 12px}
+#calendar .fc-day-number{padding-left:10px!important;text-align:left!important}
+@media screen and (min-width: 991px) {
+#calendar .fc-day-number{font-size:25px;letter-spacing:-2px}
+}
+#calendar .fc-day-grid-event{margin:1px 9px 0}
+.fc-toolbar{margin-bottom:0;padding:20px 7px 19px;position:relative}
+#calendar-widget .fc-toolbar h2{margin-top:6px;font-size:20px;font-weight:400;text-transform:uppercase;}
+.fc-toolbar .ui-button{border:0;padding:0;width:30px;height:30px;border-radius:50%;margin-top:2px;outline:none!important;text-align:center;}
+.fc-toolbar .ui-button:hover{background:#fff;color:#000}
+.fc-toolbar .ui-button > span{position:relative;font-family:"Material Design Icons";font-size:20px;line-height:100%;width:30px;display:block;margin-top:2px}
+.fc-toolbar .ui-button > span:before{position:relative;z-index:1}
+.fc-toolbar .ui-button > span.ui-icon-circle-triangle-w:before{content:"\F0DBA"}
+.fc-toolbar .ui-button > span.ui-icon-circle-triangle-e:before{content:"\F0DBB"}
+.fc-view,.fc-view > table{border:0;overflow:hidden}
+.fc-view > table > tbody > tr > .ui-widget-content{border-top:0}
+div.fc-row{margin-right:0!important;border:0!important}
+.fc-today{color:#000!important;font-weight:bold;}
+.event-tag{margin-top:5px}
+.event-tag > span{border-radius:50%;width:30px;height:30px;margin-right:3px;position:relative;display:inline-block;cursor:pointer}
+.event-tag > span:hover{opacity:.8;filter:alpha(opacity=80)}
+.event-tag>span{width:30px;height:30px;margin:0 0 3px;position:relative;display:inline-block;vertical-align:top}
+.event-tag>span.color-tag__default{border:1px solid #eee;background-color:#fff!important}
+.event-tag>span.color-tag__default>i:before{color:#333}
+.event-tag>span,.event-tag>span>i{-webkit-transition:all;-o-transition:all;transition:all;-webkit-transition-duration:.2s;transition-duration:.2s}
+.event-tag>span>input[type=radio]{margin:0;width:100%;height:100%;position:relative;z-index:2;cursor:pointer;opacity:0;filter:alpha(opacity=0)}
+.event-tag>span>input[type=radio]:checked+i{opacity:1;filter:alpha(opacity=100);-webkit-transform:scale(1);-ms-transform:scale(1);-o-transform:scale(1);transform:scale(1)}
+.event-tag>span:hover{opacity:.8;filter:alpha(opacity=80)}
+.event-tag>span>i{position:absolute;left:0;top:0;width:100%;height:100%;padding:4px 0 0 7px;opacity:0;filter:alpha(opacity=0);-webkit-transform:scale(0);-ms-transform:scale(0);-o-transform:scale(0);transform:scale(0)}
+.event-tag>span>i:before{content:"\F012C";font-family:"Material Design Icons";color:#fff;font-size:16px;z-index:1}
+hr.fc-divider{border-width:1px;border-color:#eee}
+.fc-day-grid-container.fc-scroller{height:auto!important;overflow:hidden!important}
